# Pico-Logging

./: CMakeLists.txt
Include/: ILog.h  Log.h
Source/: Log.cpp
cmake/: PicoLoggingConfig.cmake.in
tools/: Build.bat  Install.bat
